--- a/Entrega_2.ipynb
+++ b/Entrega_2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMDNJ0a2KVX/6psd9p0SOXk",
+      "authorship_tag": "ABX9TyMXJ3oKUlFyPs0WnR1f5Lny",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "FGH_7K4DGyyM",
         "colab_type": "code",
-        "outputId": "eaa6effd-cd07-4cab-b9db-cfbf77807468",
+        "outputId": "a59a0e8a-3dd1-4549-d292-644f01055d07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -398,20 +398,20 @@
         "# Mostramos información sobre el error min y máx durante el entrenamiento y el sme de la evaluación\n",
         "for idx,model in enumerate(models):\n",
         "  plot_history(histories[idx])\n",
-        "  print(\"Máximo error:\",max(np.array(history.history['loss'])))\n",
-        "  print(\"Mínimo error:\",min(np.array(history.history['loss'])))\n",
+        "  print(\"Máximo error:\",max(np.array(histories[idx].history['loss'])))\n",
+        "  print(\"Mínimo error:\",min(np.array(histories[idx].history['loss'])))\n",
         "  print(\"Model: {}\\tSME: {}\".format(model, evals[idx]))\n"
       ],
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Máximo error: 205.22668501517515\n",
-            "Mínimo error: 2.9009237942820736\n",
+            "Máximo error: 120.95343466889406\n",
+            "Mínimo error: 3.3815712692438686\n",
             "Model: VGG16\tSME: 3.755938240625326\n",
-            "Máximo error: 205.22668501517515\n",
-            "Mínimo error: 2.9009237942820736\n",
+            "Máximo error: 197.72814109108666\n",
+            "Mínimo error: 2.7355624232278273\n",
             "Model: DenseNet121\tSME: 4.95970701013954\n",
             "Máximo error: 205.22668501517515\n",
             "Mínimo error: 2.9009237942820736\n",
